--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,10 @@
 			<version>2.23.1</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-swagger-java-starter</artifactId>
 			<version>2.23.1</version>
